--- a/src/main/resources/templates/fragments/web.html
+++ b/src/main/resources/templates/fragments/web.html
@@ -35,6 +35,9 @@
                 <li class="nav-item" sec:authorize="hasRole('ADMIN')">
                     <a class="nav-link" th:href="@{/admin/home-page}" style="color: #fc086a" >Quản lý</a>
                 </li>
+                <li class="nav-item" sec:authorize="hasRole('USER')">
+                    <a class="nav-link" th:href="@{/user/checkout/list}" style="color: #fc086a" >Danh sách đã mua hàng</a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0" th:action="@{/home-page}" id="form-search">
                 <input class="form-control mr-sm-2" type="search" th:field="${common.search}" placeholder="Tìm kiếm" aria-label="Search" th:if="${common !=null}">
