--- a/src/main/resources/templates/layouts/web.html
+++ b/src/main/resources/templates/layouts/web.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" th:href="@{/template/style.css}">
     <script th:src="@{/template/jquery/jquery-3.5.1.min.js}"></script>
     <script th:src="@{/template/paging/jquery.twbsPagination.js}"></script>
+    <link rel="stylesheet" th:href="@{/template/sweetalert2/sweetalert2.min.css}">
+    <script type='text/javascript' th:src="@{/template/sweetalert2/sweetalert2.min.js}"></script>
     <script type="text/javascript" th:src="@{/template/mdbootstrap/js/popper.min.js}"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" th:src="@{/template/mdbootstrap/js/mdb.min.js}"></script>
@@ -46,6 +48,44 @@
             }
         });
     }
+
+    function showAlertBeforeCheckout(callback) {
+        swal({
+            title: "Xác nhận thanh toán",
+            text: "Bạn có chắc muốn thanh toán !",
+            type: "warning",
+            showCancelButton: true,
+            confirmButtonText: "Xác nhận",
+            cancelButtonText: "Hủy bỏ",
+            confirmButtonClass: "btn btn-success",
+            cancelButtonClass: "btn btn-danger"
+        }).then(function (isConfirm) {
+            if (isConfirm) {
+                callback();
+            }
+        })
+    }
+
+    function showAlertAfterError(message, action) {
+        swal("Thất bại!", message, "error").then(function (isConfirm) {
+            if (isConfirm) {
+                if (action != undefined) {
+                    action();
+                }
+            }
+        });
+    }
+
+    function showAlertAfterSuccess(message, action) {
+        swal("Thành công!", message, "success").then(function (isConfirm) {
+            if (isConfirm) {
+                if (action != undefined) {
+                    action();
+                }
+            }
+        });
+    }
+
 </script>
 </body>
 </html>
