--- a/src/main/resources/templates/views/index.html
+++ b/src/main/resources/templates/views/index.html
@@ -6,27 +6,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Trang chủ</title>
+    <style>
+        ul#pagination .page-item a {
+            padding: 8px 19px;
+            border: 1px solid #404040;
+        }
+    </style>
 </head>
 <body>
 <div class="row product-list">
     <th:block th:each="product: ${products}">
-        <div class="col-3 product-item">
-            <div class="image-product">
-                <img th:src="@{${product.imageUrl}}" alt="">
-            </div>
-            <div class="detail-product">
-                <a class="product-name" th:href="@{'/product/detail/' + ${product.id}}" th:text="${product.productName}" style="color: #00cdfb"></a>
-                <p class="product-price" th:text="${'Giá:' + product.price + ' vnđ - '+ product.sale + '%'}"></p>
-                <p class="product-sale" th:text="${'Sale of:' + product.saleOf +' vnđ'}"></p>
-            </div>
-            <div class="product-action">
-                <button class="btn btn-sm btn-warning">Mua</button>
-                <button class="btn btn-sm btn-primary" th:onclick="addToCart([[${product.id}]])">Thêm vào giỏ</button>
+        <div class="col-3">
+            <div class="product-item">
+                <div class="image-product">
+                    <img th:src="@{${product.imageUrl}}" alt="">
+                </div>
+                <div class="detail-product">
+                    <a class="product-name" th:href="@{'/product/detail/' + ${product.id}}" th:text="${product.productName}" style="color: #00cdfb"></a>
+                    <p class="product-price" th:text="${'Giá:' + product.price + ' vnđ - '+ product.sale + '%'}"></p>
+                    <p class="product-sale" th:text="${'Sale of:' + product.saleOf +' vnđ'}"></p>
+                </div>
+                <div class="product-action">
+                    <a class="btn btn-sm btn-warning" th:href="@{'/user/checkout/p-'+${product.id}}">Mua</a>
+                    <button class="btn btn-sm btn-primary" th:onclick="addToCart([[${product.id}]])">Thêm vào giỏ</button>
+                </div>
             </div>
         </div>
     </th:block>
 </div>
-<div class="row">
+<div class="row" style="justify-content: center">
     <div class="dataTables_paginate paging_simple_numbers" id="dtBasicExample_paginate">
         <ul id="pagination" class="pagination-sm"></ul>
         <input type="hidden" th:value="${common.page}" name="page" id="page">
